--- a/.github/workflows/test-workspace.yml
+++ b/.github/workflows/test-workspace.yml
@@ -10,8 +10,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - name: Run a one-line script
-        run: echo Hello, world!
-      - name: Run a multi-line script
-        run: |
-          find /
+      - name: Show current directory
+        run: pwd
+#      - name: Run a multi-line script
+#        run: |
+#          find /
+#
