--- a/.github/workflows/test-workspace.yml
+++ b/.github/workflows/test-workspace.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Show current directory
         run: pwd
-#      - name: Run a multi-line script
-#        run: |
-#          find /
-#
+      - name: Show files
+        run: |
+          find /home/runner
+
