--- a/.github/workflows/test-workspace.yml
+++ b/.github/workflows/test-workspace.yml
@@ -9,10 +9,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
       - name: Show current directory
         run: pwd
-      - name: Show files
+      - name: Show files (before)
         run: |
-          find /home/runner
-
+          find /home/runner |grep -v cached
+      - uses: actions/checkout@v4
+      - name: Show files (after checkout)
+        run: |
+          find /home/runner |grep -v cached
+      - uses: actions/setup-python@v6
+        with:
+          python-version: '3.13' 
+      - name: Show files (after Python)
+        run: |
+          find /home/runner |grep -v cached
